--- a/css/style.css
+++ b/css/style.css
@@ -381,3 +381,12 @@ body {
     color: var(--yellow-color) !important;
 }
 
+.widget-icon {
+    font-size: 20px;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 3px;
+    display: inline-block;
+}
