--- a/css/fullcalendar/main.css
+++ b/css/fullcalendar/main.css
@@ -199,42 +199,42 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 .fc .fc-button-primary {
     color: #fff;
     color: var(--fc-button-text-color, #fff);
-    background-color: #2C3E50;
-    background-color: var(--fc-button-bg-color, #2C3E50);
-    border-color: #2C3E50;
-    border-color: var(--fc-button-border-color, #2C3E50);
+    background-color: #007060;
+    background-color: var(--fc-button-bg-color, #007060);
+    border-color: #007060;
+    border-color: var(--fc-button-border-color, #007060);
   }
 .fc .fc-button-primary:hover {
-    color: #fff;
-    color: var(--fc-button-text-color, #fff);
-    background-color: #1e2b37;
-    background-color: var(--fc-button-hover-bg-color, #1e2b37);
-    border-color: #1a252f;
-    border-color: var(--fc-button-hover-border-color, #1a252f);
+    color: #6c757d;
+    color: var(--fc-button-text-color, #6c757d);
+    background-color: #ffa400;
+    background-color: var(--fc-button-hover-bg-color, #ffa400);
+    border-color: #ffa400;
+    border-color: var(--fc-button-hover-border-color, #ffa400);
   }
 .fc .fc-button-primary:disabled { /* not DRY */
     color: #fff;
     color: var(--fc-button-text-color, #fff);
-    background-color: #2C3E50;
-    background-color: var(--fc-button-bg-color, #2C3E50);
-    border-color: #2C3E50;
-    border-color: var(--fc-button-border-color, #2C3E50); /* overrides :hover */
+    background-color: #6c757d;
+    background-color: var(--fc-button-bg-color, #6c757d);
+    border-color: #6c757d;
+    border-color: var(--fc-button-border-color, #6c757d); /* overrides :hover */
   }
 .fc .fc-button-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(76, 91, 106, 0.5);
+    box-shadow: 0 0 0 0.1rem rgba(0, 91, 106, 0.5);
   }
 .fc .fc-button-primary:not(:disabled):active,
   .fc .fc-button-primary:not(:disabled).fc-button-active {
-    color: #fff;
-    color: var(--fc-button-text-color, #fff);
-    background-color: #1a252f;
-    background-color: var(--fc-button-active-bg-color, #1a252f);
-    border-color: #151e27;
-    border-color: var(--fc-button-active-border-color, #151e27);
+    color: #6c757d;
+    color: var(--fc-button-text-color, #6c757d);
+    background-color: #ffa400;
+    background-color: var(--fc-button-active-bg-color, #ffa400);
+    border-color: #ffa400;
+    border-color: var(--fc-button-active-border-color, #ffa400);
   }
 .fc .fc-button-primary:not(:disabled):active:focus,
   .fc .fc-button-primary:not(:disabled).fc-button-active:focus {
-    box-shadow: 0 0 0 0.2rem rgba(76, 91, 106, 0.5);
+    box-shadow: 0 0 0 0.1rem rgba(0, 96, 100, 0.5);
   }
 .fc {
 
@@ -576,10 +576,10 @@ A HORIZONTAL event
 */
 .fc-h-event { /* allowed to be top-level */
   display: block;
-  border: 1px solid #3788d8;
-  border: 1px solid var(--fc-event-border-color, #3788d8);
-  background-color: #3788d8;
-  background-color: var(--fc-event-bg-color, #3788d8)
+  border: 1px solid #00AC94;
+  border: 1px solid var(--fc-event-border-color, #00AC94);
+  background-color: #00AC94;
+  background-color: var(--fc-event-bg-color, #00AC94)
 
 }
 .fc-h-event .fc-event-main {
@@ -912,8 +912,8 @@ A HORIZONTAL event
   box-sizing: content-box;
   width: 0;
   height: 0;
-  border: 4px solid #3788d8;
-  border: calc(var(--fc-daygrid-event-dot-width, 8px) / 2) solid var(--fc-event-border-color, #3788d8);
+  border: 4px solid #00AC94;
+  border: calc(var(--fc-daygrid-event-dot-width, 8px) / 2) solid var(--fc-event-border-color, #00AC94);
   border-radius: 4px;
   border-radius: calc(var(--fc-daygrid-event-dot-width, 8px) / 2);
 }
@@ -932,10 +932,10 @@ A VERTICAL event
 
 .fc-v-event { /* allowed to be top-level */
   display: block;
-  border: 1px solid #3788d8;
-  border: 1px solid var(--fc-event-border-color, #3788d8);
-  background-color: #3788d8;
-  background-color: var(--fc-event-bg-color, #3788d8)
+  border: 1px solid #00AC94;
+  border: 1px solid var(--fc-event-border-color, #00AC94);
+  background-color: #00AC94;
+  background-color: var(--fc-event-bg-color, #00AC94)
 
 }
 
@@ -1398,8 +1398,8 @@ A VERTICAL event
     box-sizing: content-box;
     width: 0;
     height: 0;
-    border: 5px solid #3788d8;
-    border: calc(var(--fc-list-event-dot-width, 10px) / 2) solid var(--fc-event-border-color, #3788d8);
+    border: 5px solid #00AC94;
+    border: calc(var(--fc-list-event-dot-width, 10px) / 2) solid var(--fc-event-border-color, #00AC94);
     border-radius: 5px;
     border-radius: calc(var(--fc-list-event-dot-width, 10px) / 2);
   }
