--- a/css/fullcalendar/main.css
+++ b/css/fullcalendar/main.css
@@ -205,12 +205,12 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     border-color: var(--fc-button-border-color, #007060);
   }
 .fc .fc-button-primary:hover {
-    color: #6c757d;
-    color: var(--fc-button-text-color, #6c757d);
-    background-color: #ffa400;
-    background-color: var(--fc-button-hover-bg-color, #ffa400);
-    border-color: #ffa400;
-    border-color: var(--fc-button-hover-border-color, #ffa400);
+    color: #fff;
+    color: var(--fc-button-text-color, #fff);
+    background-color: #00AC94;
+    background-color: var(--fc-button-hover-bg-color, #00AC94);
+    border-color: #00AC94;
+    border-color: var(--fc-button-hover-border-color, #00AC94);
   }
 .fc .fc-button-primary:disabled { /* not DRY */
     color: #fff;
@@ -225,12 +225,12 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
   }
 .fc .fc-button-primary:not(:disabled):active,
   .fc .fc-button-primary:not(:disabled).fc-button-active {
-    color: #6c757d;
-    color: var(--fc-button-text-color, #6c757d);
-    background-color: #ffa400;
-    background-color: var(--fc-button-active-bg-color, #ffa400);
-    border-color: #ffa400;
-    border-color: var(--fc-button-active-border-color, #ffa400);
+    color: #fff;
+    color: var(--fc-button-text-color, #fff);
+    background-color: #00AC94;
+    background-color: var(--fc-button-active-bg-color, #00AC94);
+    border-color: #00AC94;
+    border-color: var(--fc-button-active-border-color, #00AC94);
   }
 .fc .fc-button-primary:not(:disabled):active:focus,
   .fc .fc-button-primary:not(:disabled).fc-button-active:focus {
@@ -872,7 +872,7 @@ A HORIZONTAL event
 .fc-daygrid-event { /* make root-level, because will be dragged-and-dropped outside of a component root */
   position: relative; /* for z-indexes assigned later */
   white-space: nowrap;
-  border-radius: 3px; /* dot event needs this to when selected */
+  border-radius: 10rem; /* dot event needs this to when selected */
   font-size: .85em;
   font-size: var(--fc-small-font-size, .85em);
 }
@@ -882,7 +882,7 @@ A HORIZONTAL event
   }
 .fc-daygrid-block-event .fc-event-time,
   .fc-daygrid-block-event .fc-event-title {
-    padding: 1px;
+    padding: 0.1rem 0.5rem;
   }
 /* --- the dot style of event --- */
 .fc-daygrid-dot-event {
