--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+    background-color: #f9f9fd;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(to top, var(--yellow-color),  var(--yellow-color));
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    background-color: #f9f9fd;
+}
+
 :root{
     --dark-cyan-color: #007060;
     --cyan-color: #00AC94;
@@ -242,7 +256,7 @@ body {
 }
 
 .notifications-scrollbar::-webkit-scrollbar {
-    width: 10px;
+    width: 7px;
     background-color: #f9f9fd;
 }
 
@@ -252,7 +266,7 @@ body {
 }
 
 .notifications-scrollbar::-webkit-scrollbar-thumb {
-    background-color: var(--dark-cyan-color)
+    background: linear-gradient(to top, var(--yellow-color),  var(--yellow-color));
 }
 
 .notifications {
