Добавлены проверки ввода данных полей в формах и исправлен интерфейс (теперь длинные данные не вылезают за границы таблиц)

--- a/css/style.css
+++ b/css/style.css
@@ -416,3 +416,7 @@ body {
     border-color: var(--dark-cyan-color) !important;
     background-color: var(--dark-cyan-color) !important;
 }
+
+table.column-wrap tbody td {
+    word-break: break-word;
+}
